fixed the zoom z-index

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 }
 .card:hover {
   transform: scale(1.05);
+  z-index:1;
 }
 
 /*custom color for nav link*/
